# TRsync

./: .gitignore  CMakeLists.txt  README.md  build_deb.sh  extract_glade_widgets.py  verify_checkboxes.py
src/: embedded_icons.h  inifile.cpp  inifile.h  main.cpp  mainwindow.cpp  mainwindow.h  rsyncdialog.cpp  rsyncdialog.h  rsyncdialog_new.cpp  rsyncdialog_new.h  rsyncprocess.cpp  rsyncprocess.h  rsyncstats.cpp  rsyncstats.h  tqtmultiprogressdialog.cpp  tqtmultiprogressdialog.h
